Email Spacing Fixes
** EMAIL GENERATOR **
- changed the bad bottom spacing when the screen isn't tall enough
- added a min width attribute to the menus
** SCHEDULE **
- verified schedule
- changed title of page

--- a/css/email.css
+++ b/css/email.css
@@ -1,7 +1,7 @@
 /* Border Styles */
 
-.sidebar, .optionBox                                        { text-align: center; border-bottom: #555 1px solid; border-left: #555 1px solid; border-right: #555 1px solid; background-color: white; } 
-.sideHead                                                   { background-color: #555; text-align: center; color: white; border-bottom: #555 1px solid; } 
+.sidebar, .optionBox                                        { text-align: center; border-bottom: #555 1px solid; border-left: #555 1px solid; border-right: #555 1px solid; background-color: white; min-width: 250px;} 
+.sideHead                                                   { background-color: #555; text-align: center; color: white; border-bottom: #555 1px solid; min-width: 250px;} 
 button:active, button:focus, .form-control:focus            { outline: none !important; border-color: rgb(78,216,255) !important; box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 7px rgba(78,216,255,0.6) !important; } 
 #copyMessage, #hyperLinkMessage                             { visibility: hidden; padding: 1ex; border: #ccc 1px solid; background-color: white; position: relative; color: #777; }
 .sidebar:hover                                              { border-right: rgb(78,216,255) 4px solid; } 
